--- a/team/templates/team/home.html
+++ b/team/templates/team/home.html
@@ -1,1 +1,4 @@
-{% extends 'team/base.html' %} {% block content %} {% endblock content %}
+{% extends 'team/base.html' %}
+{% block content %}
+
+{% endblock content %}
