--- a/team/templates/team/student_update.html
+++ b/team/templates/team/student_update.html
@@ -1,16 +1,15 @@
-{% extends 'team/home.html' %} 
+{% extends 'team/base.html' %} 
 
 {% block content %}
 
-<h2>Student Add</h2>
+<h2>Student Update</h2>
 <div class="container">
 {% load crispy_forms_tags %}
     <form action="" method="POST" enctype="multipart/form-data">
         {% csrf_token %} 
-        {% comment %} {{form.as_p}} {% endcomment %}
         {{ form | crispy }}
-        <input type="submit" value="Add" class="btn btn-primary" />
-        <input type="submit" value="Back To List" class="btn btn-primary" />
+        <input type="submit" value="Update" class="btn btn-primary" />
+        <a href="{% url 'home' %}"><input type="submit" value="Back To List" class="btn btn-primary" /></a>
     </form>
 </div>
 {% endblock content %}
