--- a/team/templates/team/home.html
+++ b/team/templates/team/home.html
@@ -5,7 +5,11 @@
       <th scope="col">#</th>
       <th scope="col">First</th>
       <th scope="col">Last</th>
-      <th scope="col">Handle</th>
+      <th scope="col">
+        <a href="{% url 'student' %}" class="btn btn-outline-success"
+          >Add New</a
+        >
+      </th>
     </tr>
   </thead>
   <tbody>
@@ -17,7 +21,9 @@
       <td>
         <a href="{% url 'update' i.id %}"
           ><i class="fa-solid fa-file-pen"></i></a
-        ><a href="/"><i class="fa-solid fa-trash-can"></i></a>
+        ><a href="{% url 'delete' i.id %}"
+          ><i class="fa-solid fa-trash-can"></i
+        ></a>
       </td>
     </tr>
     {% endfor %}
