--- a/team/templates/team/student_form.html
+++ b/team/templates/team/student_form.html
@@ -2,7 +2,7 @@
 <h2>Student Add</h2>
 
 <form action="" method="post" autocomplete="off">
-  {% csrf_token %} {{form.fullname|as_crispy_field}}
+  {% csrf_token %} {{form.first_name|as_crispy_field}}
   {{form.email|as_crispy_field}} {{form.phone|as_crispy_field}}
   {{form.gender|as_crispy_field}}
   <div class="row">
