--- a/team/templates/team/base.html
+++ b/team/templates/team/base.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div class="container d-flex justify-content-center">
-      <div class="col-md-9 offset-md-1 mt-3">
+      <div class="mt-3 col-md-8 ">
         <div class="jumbotron">
           <h1 class="display-4">Student Register</h1>
           <p class="lead font-italic">
