--- a/team/templates/team/student_form.html
+++ b/team/templates/team/student_form.html
@@ -10,13 +10,13 @@
     <div class="col-md-8">{{form.path|as_crispy_field}}</div>
   </div>
   <div class="mt-1 d-flex justify-content-between py-2">
-    <div class=" ">
-      <button type="submit" class="btn btn-success btn-block btn-lg">
+    <div>
+      <button type="submit" class="btn btn-success btn-block btn-md">
         <i class="fas fa-database"></i> Submit
       </button>
     </div>
-    <div class=" ">
-      <a href="{% url 'home' %}" class="btn btn-secondary btn-block btn-lg">
+    <div>
+      <a href="{% url 'home' %}" class="btn btn-secondary btn-block btn-md">
         <i class="fas fa-stream"></i> Back to list
       </a>
     </div>
