--- a/team/templates/team/student_update.html
+++ b/team/templates/team/student_update.html
@@ -1,15 +1,27 @@
-{% extends 'team/base.html' %} 
-
-{% block content %}
+{% extends 'team/base.html' %} {% block content %}
 
 <h2>Student Update</h2>
 <div class="container">
-{% load crispy_forms_tags %}
-    <form action="" method="POST" enctype="multipart/form-data">
-        {% csrf_token %} 
-        {{ form | crispy }}
-        <input type="submit" value="Update" class="btn btn-primary" />
-        <a href="{% url 'home' %}"><input type="submit" value="Back To List" class="btn btn-primary" /></a>
-    </form>
+  {% load crispy_forms_tags %}
+  <form action="" method="POST" enctype="multipart/form-data">
+    {% csrf_token %} {{ form | crispy }} {% comment %}
+    <input type="submit" value="Update" class="btn btn-primary" />
+    <a href="{% url 'home' %}"
+      ><input type="submit" value="Back To List" class="btn btn-primary"
+    /></a>
+    {% endcomment %}
+    <div class="mt-1 d-flex justify-content-between py-2">
+      <div>
+        <button type="submit" class="btn btn-success btn-block btn-md">
+          Update
+        </button>
+      </div>
+      <div>
+        <a href="{% url 'home' %}" class="btn btn-secondary btn-block btn-md">
+          <i class="fas fa-stream"></i> Back to list
+        </a>
+      </div>
+    </div>
+  </form>
 </div>
 {% endblock content %}
