--- a/team/templates/team/student_delete.html
+++ b/team/templates/team/student_delete.html
@@ -1,15 +1,16 @@
-{% extends 'team/home.html' %} 
+{% extends 'team/home.html' %} {% block content %}
 
-{% block content %}
-
-<h2>Student Delete</h2>
 <div class="container">
-    
-    <p>Are you Sure? Student Will be deleted. {{ student.first_name }}</p>
+  <h2>Student Delete</h2>
+  <p>Are you Sure? Student will be deleted. {{ student.first_name }}</p>
+  <div class="d-flex">
     <form action="" method="post">
-        {% csrf_token %}
-        <button class="btn btn-primary">YES</button>
+      {% csrf_token %}
+      <button class="btn btn-primary">YES</button>
     </form>
-    <a href="{% url 'home' %}"><button class="btn btn-primary">NO</button></a>
+    <a href="{% url 'home' %}"
+      ><button class="btn btn-primary ms-3">NO</button></a
+    >
+  </div>
 </div>
 {% endblock content %}
