--- a/team/templates/team/student_update.html
+++ b/team/templates/team/student_update.html
@@ -4,12 +4,7 @@
 <div class="container">
   {% load crispy_forms_tags %}
   <form action="" method="POST" enctype="multipart/form-data">
-    {% csrf_token %} {{ form | crispy }} {% comment %}
-    <input type="submit" value="Update" class="btn btn-primary" />
-    <a href="{% url 'home' %}"
-      ><input type="submit" value="Back To List" class="btn btn-primary"
-    /></a>
-    {% endcomment %}
+    {% csrf_token %} {{ form | crispy }}
     <div class="mt-1 d-flex justify-content-between py-2">
       <div>
         <button type="submit" class="btn btn-success btn-block btn-md">
